...
        android:id="@+id/name_frame"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_register_editviewshape"
            android:drawableLeft="@drawable/user"
...
            android:hint="First Name"
            android:inputType="textPersonName|text">

        </EditText>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_register_editviewshape"
            android:drawableLeft="@drawable/user"
...
            android:inputType="textPersonName">

        </EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/phone_num"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/name_frame"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_register_editviewshape"
        android:drawableLeft="@drawable/phone"
        android:gravity="center"
        android:hint="Phone Number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/phone_num"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_register_editviewshape"
        android:drawableLeft="@drawable/email"
        android:gravity="center"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/Email"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_register_editviewshape"
        android:drawableLeft="@drawable/user"
        android:gravity="center"
        android:hint="Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_password"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/login_register_editviewshape"
        android:layout_below="@id/text_username"
        android:layout_marginTop="20dp"
...
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"
        android:hint="Password" />

    <EditText
        android:gravity="center"
        android:id="@+id/text_password_check"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_password"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:background="@drawable/login_register_editviewshape"
...
