<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background" >

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="Profile"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp" >

    </TextView>

    <Button
        android:id="@+id/user_self_login"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/title_profile"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_weight="1.05"
        android:background="@drawable/circle_shape"
        android:drawableBottom="@drawable/ic_account_circle_blackfix_24dp" />

    <LinearLayout
        android:id="@+id/profile_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_self_login"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="20dp"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

                <EditText
                    android:id="@+id/user_first_name_display"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:hint="First Name"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/user_last_name_display"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:hint="Last Name"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/user_email_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phone_num_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:hint="Phone number"
                android:inputType="phone"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_bar"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/positive_button"
        android:gravity="center"
        android:text="Edit Profile"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp" >

    </Button>

    <Button
        android:id="@+id/lent"
        android:text="Lent the Book"
        android:textColor="#FFFFFFFF"
        android:layout_width="match_parent"
        android:layout_below="@id/edit_profile"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:textSize="17sp"
        android:background="@drawable/positive_button" >
    </Button>



    <Button
        android:id="@+id/profile_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/negative_button"
        android:gravity="center"
        android:text="Back"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" >

    </Button>

</RelativeLayout>