<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_main"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/menuBackground"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <Button
        android:id="@+id/user_self_login"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_shape"
        android:contentDescription="Navigation header"
        android:drawableLeft="@drawable/ic_account_circle_blackfix1_24dp" />

    <TextView
        android:id="@+id/un"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="30dp"
        android:textSize="20sp"
        android:text="User Name: " />


</LinearLayout>
